Updated indexing, addition of mobile div

--- a/settings.yml
+++ b/settings.yml
@@ -8,8 +8,13 @@ house_ads_livewrapped_source_script_pid:
   type: string
   description:
     en:  "Enter the source script pid"
-house_ads_livewrapped_source_tag_id_base_string:
+house_ads_livewrapped_source_tag_id_base_string_desktop:
   default: ''
   type: string
   description:
-    en:  "Enter the tag id format, placing a # where the iteration number should be"
+    en:  "Enter the tag id format, placing a # where the iteration number should be (desktop)"
+house_ads_livewrapped_source_tag_id_base_string_mobile:
+  default: ''
+  type: string
+  description:
+    en:  "Enter the tag id format, placing a # where the iteration number should be (mobile)"
